# oxidizemc

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  OxidizeMC-JNI-Bindings.h  README.md  bindings-rustfmt.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml
.github/workflows/actions/build-helper/: action.yml
.github/workflows/actions/multi-cache-restore/: action.yml
JAVA_MOD/: LICENSE.txt  build.gradle  gradle.properties
JAVA_MOD/src/client/java/io/github/pitchblacknights/oxidizemc/client/: OxidizeMCClient.java
JAVA_MOD/src/main/java/io/github/pitchblacknights/oxidizemc/: OxidizeMC.java
JAVA_MOD/src/main/resources/: fabric.mod.json
JAVA_MOD/src/main/resources/rust_lib/: oxidizemc-osx-aarch64.dylib  oxidizemc-osx-x86_64.dylib
bindings-fabric-loader/: Cargo.toml  full-bindings.rs  java-spaghetti-output.txt  java-spaghetti.yaml
bindings-fabric-loader/src/: lib.rs  net.rs  util.rs
bindings-fabric-loader/src/net/: fabricmc.rs
bindings-fabric-loader/src/net/fabricmc/: api.rs
bindings-fabric-loader/src/net/fabricmc/loader/: api.rs
bindings-fabric-loader/src/net/fabricmc/loader/api/: entrypoint.rs  metadata.rs
bindings-fabric-loader/src/net/fabricmc/loader/api/metadata/: version.rs
oxidizemc/: Cargo.toml
oxidizemc/src/: lib.rs
scripts/: build.py  gen.bat  install-targets.py  setup.bat  setup.py  uninstall-targets.py
src/: lib.rs
