[package]
name = "oxidizemc-bindings-fabric-loader"
version = "0.0.0-dev1"
edition = "2024"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
repository = "https://github.com/pitchblacknights/nesmur"
license = "MIT"

[dependencies]
java-spaghetti = { git = "https://github.com/Dirbaio/java-spaghetti", rev = "cef9ce16773133fe3c44843b72717d4b678e9f6f" }
